Import of JESSE/Text-Quoted-1.6 from CPAN.
gitpan-cpan-distribution: Text-Quoted
gitpan-cpan-version:      1.6
gitpan-cpan-path:         JESSE/Text-Quoted-1.6.tar.gz
gitpan-cpan-author:       JESSE
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -25,11 +25,10 @@ DEPENDENCIES
 
 This module requires these other modules and libraries:
 
-  blah blah blah
+	Text::AutoFormat
 
 COPYRIGHT AND LICENCE
 
-Put the correct copyright and licence information here.
 
 Copyright (C) 2002 Simon Cozens
 
