--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Text::Quoted.
 
+1.6  Wed Jun 16 13:36:00 EDT 2004
+
+	- New maintainer
+	- Better handle attempts to quote an empty or undef string
+
 1.0  Tue Dec  3 15:01:07 2002
 	- original version; created by h2xs 1.22 with options
 		-AX -n Text::Quoted
