--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Text::Quoted.
 
+1.8  Thu Jul  1 23:21:14 EDT 2004
+        - Fix handling for the case where we we're quoting
+	  a false but defined string. From Stephen Quinney.
+
 1.7  Wed Jun 16 16:54:57 EDT 2004
 
 	- New maintainer learns to remove his debugging output
