Import of JESSE/Text-Quoted-1.10 from CPAN.
gitpan-cpan-distribution: Text-Quoted
gitpan-cpan-version:      1.10
gitpan-cpan-path:         JESSE/Text-Quoted-1.10.tar.gz
gitpan-cpan-author:       JESSE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perl extension Text::Quoted.
 
+1.10 Tue Feb 13 2007
+    - fix a bug where lines are hidden when the quote character
+      changes midstream.  Reported by Dirk Pape and Sven Sternberger
+
+1.9  Fri Jun 24 15:34:46 EDT 2005
+	- Manifest cleanup. From Mike Castle
+
 1.8  Thu Jul  1 23:21:14 EDT 2004
         - Fix handling for the case where we we're quoting
 	  a false but defined string. From Stephen Quinney.
