Import of FALCONE/Text-Quoted-2.01 from CPAN.
gitpan-cpan-distribution: Text-Quoted
gitpan-cpan-version:      2.01
gitpan-cpan-path:         FALCONE/Text-Quoted-2.01.tar.gz
gitpan-cpan-author:       FALCONE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Text::Quoted.
 
+2.01 Wed Feb 20 2007
+    - fix a problem with $VERSION
+
 1.10 Tue Feb 13 2007
     - fix a bug where lines are hidden when the quote character
       changes midstream.  Reported by Dirk Pape and Sven Sternberger
