Import of FALCONE/Text-Quoted-2.02 from CPAN.
gitpan-cpan-distribution: Text-Quoted
gitpan-cpan-version:      2.02
gitpan-cpan-path:         FALCONE/Text-Quoted-2.02.tar.gz
gitpan-cpan-author:       FALCONE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Text::Quoted.
 
+2.02 Wed Feb 20 2007
+    - fix a missing test in MANIFEST
+
 2.01 Wed Feb 20 2007
     - fix a problem with $VERSION
 
