--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension Text::Quoted.
 
+2.03
+    - delete a lot of unused code
+    - many micro optimisations
+    - performance improvements, up to 1.5x in total
+    - clanups of Makefile, README
+
 2.02 Wed Feb 20 2007
     - fix a missing test in MANIFEST
 
