Import of RUZ/Text-Quoted-2.03 from CPAN.
gitpan-cpan-distribution: Text-Quoted
gitpan-cpan-version:      2.03
gitpan-cpan-path:         RUZ/Text-Quoted-2.03.tar.gz
gitpan-cpan-author:       RUZ
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Perl extension Text::Quoted.
 
-2.03
+2.03 Wed Nov  7 2007
     - delete a lot of unused code
     - many micro optimisations
     - performance improvements, up to 1.5x in total
