Import of TSIBLEY/Text-Quoted-2.07 from CPAN.
gitpan-cpan-distribution: Text-Quoted
gitpan-cpan-version:      2.07
gitpan-cpan-path:         TSIBLEY/Text-Quoted-2.07.tar.gz
gitpan-cpan-author:       TSIBLEY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Text::Quoted.
 
+2.07    Thu May 16 18:18:01 PDT 2013
+    - Add set_quote_characters() function to control what additional characters
+      are treated as quoting chars (above and beyond ">")
+
 2.06 Mon Mar 15 2010
     - make extracting more effective
     - line with only '=' characters is not treated as quoter
