Import of TSIBLEY/Text-Quoted-2.08 from CPAN.
gitpan-cpan-distribution: Text-Quoted
gitpan-cpan-version:      2.08
gitpan-cpan-path:         TSIBLEY/Text-Quoted-2.08.tar.gz
gitpan-cpan-author:       TSIBLEY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Text::Quoted.
 
+2.08    Tue May 21 11:40:04 PDT 2013
+    - add a combine_hunks function to recombine hunks (RJBS)
+    - implicitly private methods are now underscore private: organize,
+      find_below, classify, expand_tabs (RJBS)
+
 2.07    Thu May 16 18:18:01 PDT 2013
     - Add set_quote_characters() function to control what additional characters
       are treated as quoting chars (above and beyond ">")
